# skrm-server

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  CLAUDE.md  CONTEXT_USAGE_EXAMPLES.md  Dockerfile  FIDO2_COVERAGE_IMPROVEMENTS.md  FIDO2_IMPLEMENTATION.md  FIDO2_ROUTE_TEST_FIXES.md  FIDO2_TEST_CONSISTENCY_UPDATE.md  FIDO2_TEST_RESULTS.md  README.md  TODO.md  alembic.ini  coverage.json  docker-compose.yaml  experiment.ipynb  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20251109_171640_initial_schema.py  20251109_175523_initial_schema.py  20251109_185451_initial_schema.py  20251109_191656_root_user.py  20251110_094858_soft_delete.py  20251118_163605_initial_schema.py  20251118_163800_root_user.py  20251208_180412_add_doc_yupdate_table.py  20251220_230333_seed_mock_data.py  20260210_170948_seed_extended_mock_data.py  20260210_173724_add_backlog_sprint_redistribute_tasks.py  20260210_181330_add_task_feature_links_for_active_sprint.py
app/: config.py  logging.py  main.py  models.py
app/api/: auth.py  users.py
app/core/: auth.py  context.py  deps.py  feature_id.py  fido2_server.py  logging.py  middleware.py  org_id.py  repr_mixin.py  task_id.py
app/core/db/: __init__.py  database.py
app/core/exceptions/: __init__.py  domain_exceptions.py  http_exceptions.py
app/core/weaviate/: weaviate.py
app/core/websocket/: __init__.py  auth.py  manager.py
app/core/yjs/: __init__.py  postgres_ystore.py  websocket_manager.py
app/logic/: __init__.py  auth.py  deps.py
app/logic/v1/: __init__.py  deployment_envs.py  docs.py  feature_docs.py  features.py  organization_principals.py  organizations.py  project_teams.py  projects.py  sprint_tasks.py  sprint_teams.py  sprints.py  task_deployment_envs.py  task_features.py  task_owners.py  task_reviewers.py  tasks.py  team_members.py  team_reviewers.py  teams.py  txs.py  users.py  yjs_collab.py
app/models/: __init__.py  k_deployment_env.py  k_doc.py  k_doc_yupdate.py  k_feature.py  k_feature_doc.py  k_fido2_credential.py  k_organization.py  k_organization_principal.py  k_principal.py  k_principal_identity.py  k_project.py  k_project_feature.py  k_project_team.py  k_sprint.py  k_sprint_task.py  k_sprint_team.py  k_task.py  k_task_deployment_env.py  k_task_feature.py  k_task_owner.py  k_task_reviewer.py  k_team.py  k_team_member.py  k_team_reviewer.py
app/routes/: auth.py  deps.py  health.py
app/routes/v1/: __init__.py  deployment_envs.py  docs.py  feature_docs.py  features.py  organization_principals.py  organizations.py  project_teams.py  projects.py  sprint_tasks.py  sprint_teams.py  sprints.py  task_deployment_envs.py  task_features.py  task_owners.py  task_reviewers.py  tasks.py  team_members.py  team_reviewers.py  teams.py  txs.py  users.py
app/routes/v1/ws/: __init__.py  collab.py
app/schemas/: deployment_env.py  doc.py  feature.py  feature_doc.py  fido2.py  organization.py  organization_principal.py  project.py  project_team.py  sprint.py  sprint_task.py  sprint_team.py  task.py  task_deployment_env.py  task_feature.py  task_owner.py  task_reviewer.py  team.py  team_member.py  team_reviewer.py  txs.py  user.py
app/services/: auth.py
scripts/: alembic_revision.py  dev.py
tests/: conftest.py  test_config.py  test_k_principal.py  test_k_principal_identity.py  test_main.py
tests/core/: test_auth.py  test_feature_id.py  test_fido2_server.py  test_logging.py  test_middleware.py  test_org_id.py  test_repr_mixin.py  test_task_id.py
tests/core/db/: __init__.py  test_database.py
tests/core/exceptions/: __init__.py  test_domain_exceptions.py  test_http_exceptions.py
tests/logic/: __init__.py  test_auth.py  test_deps.py  test_fido2_auth.py
tests/logic/v1/: __init__.py  test_organizations.py  test_sprints.py  test_txs.py
tests/models/: __init__.py  test_k_deployment_env.py  test_k_doc.py  test_k_feature.py  test_k_feature_doc.py  test_k_fido2_credential.py  test_k_organization.py  test_k_organization_principal.py  test_k_principal.py  test_k_principal_identity.py  test_k_project.py  test_k_project_feature.py  test_k_project_team.py  test_k_sprint.py  test_k_sprint_task.py  test_k_sprint_team.py  test_k_task_deployment_env.py  test_k_task_feature.py  test_k_task_owner.py  test_k_task_reviewer.py  test_k_team.py  test_k_team_member.py  test_k_team_reviewer.py
tests/routes/: __init__.py  conftest.py  test_auth.py  test_deps.py  test_fido2_auth.py  test_health.py
tests/routes/v1/: __init__.py  conftest.py  test_deployment_envs.py  test_docs.py  test_feature_docs.py  test_features.py  test_organization_principals.py  test_organizations.py  test_project_teams.py  test_projects.py  test_sprint_tasks.py  test_sprint_teams.py  test_sprints.py  test_task_deployment_envs.py  test_task_features.py  test_task_owners.py  test_task_reviewers.py  test_tasks.py  test_team_members.py  test_team_reviewers.py  test_teams.py  test_txs.py  test_users.py
tests/routes/v1/ws/: __init__.py  test_collab.py
