[project]
name = "python-server"
version = "0.1.0"
description = "A modern Python web server built with FastAPI"
authors = [{name = "Anthony Daga", email = "anthony@abstracted.io"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.1,<4.0.0",
    "bcrypt>=4.0.0,<5.0.0",
    "email-validator>=2.1.0,<3.0.0",
    "fastapi>=0.104.1,<0.105.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "structlog>=23.2.0,<24.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "uvicorn>=0.24.0,<0.25.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
test = [
    "pytest>=7.4.3,<8.0.0",
    "pytest-asyncio>=0.21.1,<0.22.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "httpx>=0.25.2,<0.26.0",
]
lint = [
    "black>=23.11.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.7.1,<2.0.0",
    "ruff>=0.1.6,<0.2.0",
]
dev = [
    { include-group = "test" },
    { include-group = "lint" },
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "uvloop.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
